--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -11,3 +11,14 @@ spring:
     listener:
       type: single
       ack-mode: manual
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: for.generate17091986@gmail.com
+    password: krug qlji jckp yycj
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
