--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -48,6 +48,20 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>3.3.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.example</groupId>
             <artifactId>common-events</artifactId>
             <version>0.0.1-SNAPSHOT</version>
