Добавил API к notification-service. Принимает UserEvent по методу POST. Отправляет письмо на соответствуюищй адрес.

--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -25,3 +25,8 @@ spring:
           auth: true
           starttls:
             enable: true
+server:
+  port: 10002
+  error:
+    whitelabel:
+      enabled: false
