--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -1,18 +1,9 @@
-server:
-  port: 10003
-  error:
-    whitelabel:
-      enabled: false
-
 spring:
-  application: name=Shvidkiy-Homework_int5
-  datasource:
-    url: jdbc:postgresql://147.45.225.242:10001/learn_db
-    username: user
-    password: AstonHomework2
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: none
-      dialect: org.hibernate.dialect.PostgreSQL17Dialect
+  application:
+    name: employee-service
+  config:
+    import: "optional:configserver:http://localhost:10006"
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
