--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,24 +1,13 @@
-server:
-  port: 10001
-  error:
-    whitelabel:
-      enabled: false
-
 spring:
-  application: name=Shvidkiy-Homework_int5
-  datasource:
-    url: jdbc:postgresql://147.45.225.242:10001/learn_db
-    username: user
-    password: AstonHomework2
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: none
-      dialect: org.hibernate.dialect.PostgreSQL17Dialect
-  kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+  application:
+    name: user-service
+  config:
+    import: "optional:configserver:http://localhost:10006"
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
 
