--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   application:
     name: notification-service
-  cloud:
-    config:
-      uri: http://localhost:10006
+
+  config:
+    import: "optional:configserver:http://localhost:10006"
+
+  eureka:
+    client:
+      service-url:
+        defaultZone: http://localhost:8761/eureka/
+      register-with-eureka: true
+      fetch-registry: true
