Адаптировал под Докер

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -2,9 +2,11 @@ spring:
   application:
     name: gateway-service
   config:
-    import: "optional:configserver:http://localhost:10006"
-
+    import: "optional:configserver:http://config-server:10006"
 eureka:
+  instance:
+    hostname: ${spring.application.name}
+    prefer-ip-address: false
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
