--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -12,7 +12,16 @@ spring:
 server:
   port: 10006
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+
 eureka:
+  instance:
+    hostname: ${spring.application.name}
+    prefer-ip-address: false
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
