--- a/config-server/src/main/resources/config-repository/user-service.yml
+++ b/config-server/src/main/resources/config-repository/user-service.yml
@@ -12,7 +12,7 @@ spring:
       ddl-auto: none
       dialect: org.hibernate.dialect.PostgreSQL17Dialect
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: host.docker.internal:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
