--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,12 +2,15 @@ spring:
   application:
     name: user-service
   config:
-    import: "optional:configserver:http://localhost:10006"
+    import: "optional:configserver:http://config-server:10006"
 
 eureka:
+  instance:
+    hostname: ${spring.application.name}
+    prefer-ip-address: false
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
 
